# saxs_data_processing

./: .gitignore  CONTRIBUTING.rst  LICENSE.txt  README.rst  minimum_remote_spec_example.ipynb  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
brenden_prototype/: SampleTable_2024_11_04_OptimizationRound1.csv  autofit_workflow.ipynb  bo_setup.ipynb  botorch_qLogNEI_generation.ipynb  calculate_target_scattering.ipynb  mcsas_testing.ipynb  round_1_EDA.ipynb  sasview_fitting.ipynb  stober_data_aggregation.ipynb  synth_table_with_rmsedist_10_28_24.csv
brenden_prototype/datamerge/: saxs_data_process_prototyping.ipynb
brenden_prototype/datamerge/.ipynb_checkpoints/: saxs_data_process_prototyping-checkpoint.ipynb
brenden_prototype/distance_metric/: ap_dist_torch_testcase.ipynb  sasview_fit_batch_2024_10_24.json  sasview_fitting.ipynb
brenden_prototype/distance_metric/ap_dist_comparison/: I_scaled_a6ee3a08-02cd-4703-9d6c-3721dad590c8.npy  I_target.npy  ap_dist_torch_testcase.ipynb  q_grid_example.npy
docs/: conf.py  index.rst
examples/: usage_examples.ipynb
src/saxs_data_processing/: __init__.py  io.py  manipulate.py  mcsas_testfit.py  merge.py  sasview_fitting.py  subtract.py  target_comparison.py  utils.py
tests/: conftest.py
